--- a/week7.ipynb
+++ b/week7.ipynb
@@ -6,7 +6,7 @@
       "name": "week7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKQsYVgSpUfILad0AVHjNp",
+      "authorship_tag": "ABX9TyMMqKtnwPdIxXXCY+PiwW6q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,59 +28,233 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oPOz_Do3RMVc",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 153
-        },
-        "outputId": "cdb745c8-dd71-4d6a-bfc2-552224c7781f"
-      },
-      "source": [
-        "tv_show='梨泰院class'#電視名稱\n",
-        "realease_year='2020'#上映時間\n",
-        "director='金城允'#導演\n",
-        "language='韓文'#語言\n",
-        "episode='16集'#集數\n",
-        "main_actor='朴敘俊'#男主角\n",
-        "main_actress='金多美'#女主角\n",
-        "ratings='11.832%'#收視率\n",
-        "print(tv_show)\n",
-        "print(realease_year)\n",
-        "print(director)\n",
-        "print(language)\n",
-        "print(episode)\n",
-        "print(main_actor)\n",
-        "print(main_actress)\n",
-        "print(ratings)"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "梨泰院class\n",
-            "2020\n",
-            "金城允\n",
-            "韓文\n",
-            "16集\n",
-            "朴敘俊\n",
-            "金多美\n",
-            "11.832%\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qLCkJ0SKTPbh",
+        "id": "ASh0CFNNXwCb",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "#從維基百科找出要記錄的韓劇梨泰院相關資訊"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kPzKGKv6XyWc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "##https://zh.wikipedia.org/wiki/梨泰院Class"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "InUb1fLtXwnq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "##相關資訊：韓劇名稱、導演、演員等"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oPOz_Do3RMVc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tv_show='梨泰院class'#電視名稱"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1KcKGbtAW0Bv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "director='金城允'#導演"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYpwssZSW8rO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "language='韓文'#語言"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gCpi3An1W8vv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "episode='16集'#集數"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kL1J3KCqW867",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "main_actor='朴敘俊'#男主角"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7wSJ6OtQW8-l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "main_actress='金多美'#女主角"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wa5qI2gJW9CG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "ratings='11.832%'#收視率"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FF1RROANW9GN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(tv_show)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3IK8xUNKXhMs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(realease_year)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7h29HoTdXhQx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(director)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TP8bivNiXhUw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(language)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uTknIbjVXhZX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(episode)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Up1HdDYWXhjB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(main_actor)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SnTAL905XhgI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(main_actress)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AUmyEhKkXhfJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(ratings)"
       ],
       "execution_count": 0,
       "outputs": []
